Remodeled components and updated term and definition form

--- a/package.json
+++ b/package.json
@@ -4,16 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --colors --progress",
+    "build:watch": "npm run build -- --watch",
+    "dev-server": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sevedkim/contechs.git"
+    "url": "git+https://github.com/sevedkim/contechs-web.git"
   },
-  "author": "Seve Kim",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sevedkim/contechs/issues"
+    "url": "https://github.com/sevedkim/contechs-web/issues"
   },
-  "homepage": "https://github.com/sevedkim/contechs#readme"
+  "homepage": "https://github.com/sevedkim/contechs-web#readme",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.0",
+    "express": "^4.14.0",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2",
+    "sinon": "^1.17.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
